# CoroExecutor

./: CMakeLists.txt  README.md  build_log.txt  foo.txt  run_tests.sh  test_log.txt
.github/workflows/: run-tests.yml
include/CoroExecutor/: CoroExecutor.hpp  Umbrella.hpp  test.hpp
include/CoroExecutor/Pool/: Pool.hpp  Umbrella.hpp  WorkItem.hpp
include/CoroExecutor/ScheduleStrategy/: RoundRobinStrategy.hpp  ScheduleStrategy.hpp  Umbrella.hpp
include/CoroExecutor/StorageStrategy/: CentralizedQueueStrategy.hpp  StorageStrategy.hpp  Umbrella.hpp
include/CoroExecutor/Task/: Task.hpp
src/: CoroExecutor.cpp  LifetimeManagedCoroutine.cpp  test.cpp
src/CoroExecutor/ScheduleStrategy/RoundRobinStrategy/: RoundRobinStrategy.cpp
tests/: CMakeLists.txt  CoroExecutor.cpp  CoroExecutorTest.cpp  Helpers.hpp  LifetimeManagedCoroutine.cpp  LifetimeManagedCoroutineTest.cpp  ManagedCoroutine.cpp  Task.cpp  testing.cpp  testing.hpp  tests.cpp
tests/CoroExecutor/: SharedHelpers.hpp
tests/CoroExecutor/ScheduleStrategy/: Fixtures.hpp  RoundRobinStrategy.cpp
tests/CoroExecutor/Task/: Fixtures.hpp  Helpers.hpp  Task.cpp
